add feign client for MS conveyor and MS deal
