# loan_application_app/src/main/java/ru/nkashlev/loan_application_app/application/controllers/LoanOfferController.java
@@ -4,7 +4,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import ru.nkashlev.loan_application_app.application.api.LoanOfferApi;
+import ru.nkashlev.loan_application_app.application.api.CreateApplicationApi;
 import ru.nkashlev.loan_application_app.application.exceptions.ScoringException;
 import ru.nkashlev.loan_application_app.application.service.OfferService;
 import ru.nkashlev.loan_application_app.application.util.ValidateLoanApplicationRequestUtil;
@@ -14,14 +14,14 @@ import ru.nkashlev.loan_application_app.model.LoanOfferDTO;
 import java.util.List;
 @RestController
 @RequiredArgsConstructor
-public class LoanOfferController implements LoanOfferApi {
+public class LoanOfferController implements CreateApplicationApi {
 
     private final OfferService offerService;
 
     private final ValidateLoanApplicationRequestUtil validateRequestService;
 
     @Override
-    public ResponseEntity<List<LoanOfferDTO>> preScoringLoanOffers(@RequestBody LoanApplicationRequestDTO request) {
+    public ResponseEntity<List<LoanOfferDTO>> loanApplication(@RequestBody LoanApplicationRequestDTO request) {
         List<String> validateRequest = validateRequestService.validateRequest(request);
         if (!validateRequest.isEmpty()) {
             throw new ScoringException(validateRequest);
